--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    implementation 'com.android.support:design:27.1.1'
 }
